# LOOM

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  KAFED-as-default.md  LICENSE  README.md  SOUL-template.md  docker-compose.yml  kafed.yaml.example  loom.yaml.example  pyproject.toml  setup.sh
.github/workflows/: build-release.yml  ci.yml  release.yml
docs/: hooks-evolution.md  loom-architecture.md
references/pipeline/: decompose-guide.md
scripts/: backlog.py  batch_ingest.py  batch_ingest_to_kafed.py  bulk_ingest_study_materials.py  convert_blog_inline.py  download_models.sh  flywheel.py  ingest_issue_list.py  ingest_new_formats.sh  ingest_notes.py  install-loom.sh  kafed-bootstrap.sh  knowledge_scanner.py  name_subclusters.py  recluster.py  scan_and_ingest.sh  sub_cluster.py  sync-to-hermes.sh  update_cluster_metadata.py  validate_hierarchy.py  wiki_sync.py
scripts/cron/: centroid_flywheel.py
scripts/install/: __init__.py  install-loom-hooks.sh  loom-bootstrap.sh  plugin.yaml  symlink-tools.sh
server/: Dockerfile  requirements.txt
src/kafed/: __init__.py  __main__.py  action_registry.py  backlog.py  config.py  entry.py  flow.py  log.py  orchestrator.py  schemas.py
src/kafed/analyzer/: __init__.py  actions.py  audit.py  benchmark.py  config.py  emergence.py  engine.py  insights.py  kb_audit.py  maintenance.py  patterns.py  pulse.py  pulse_manager.py  solidifier.py  tsr.py
src/kafed/client/: __init__.py  cli.py  flow.py  http_client.py  kafed_tool.py  local_backend.py
src/kafed/director/: __init__.py  actions.py  decision.py  eval.py  pipeline.py  planner.py  protocol.py  recommend.py  strategy.py
src/kafed/executor/: __init__.py  actions.py  dag.py  dispatcher.py  engine.py
src/kafed/finder/: __init__.py  actions.py  context_space.py  explorer.py  heartbeat.py  matcher.py  registry.py  router.py  status_cache.py
src/kafed/install/: bootstrap.py
src/kafed/knowledge/: __init__.py  actions.py  flywheel_events.py  ingest.py
src/kafed/knowledge/classify/: classify.py  domain_registry.py  seed_patterns.yaml  soft_classify.py  sub_registry.py
src/kafed/knowledge/context/: context_provider.py
src/kafed/knowledge/flywheel/: __init__.py  event_checker.py
src/kafed/knowledge/quality/: quality.py
src/kafed/knowledge/rag/: chunker.py  embedding.py  rag_engine.py  vector_store.py
src/kafed/kpak/: __init__.py  __main__.py  pack.py  unpack.py
src/kafed/loom/: __init__.py  factory.py  manager.py  shuttle.py
src/kafed/scheduler/: __init__.py  builtins.py  registry.py  runner.py
src/kafed/server/: __init__.py  main.py  main.py.bak
src/kafed/tools/: __init__.py  hermes_tools.py
src/loom/: __init__.py  __main__.py  config.py  flow.py  hexagram.py  recommend.py
src/loom/analyzer/: __init__.py  audit.py  knowledge_audit.py  maintenance.py  solidifier.py
src/loom/director/: __init__.py  eval.py  recommend.py
src/loom/finder/: __init__.py  context_space.py  explorer.py  heartbeat.py  matcher.py  registry.py  router.py  status_cache.py
src/loom/install/: bootstrap.py
src/loom/knowledge/: __init__.py  flywheel_events.py  ingest.py
src/loom/knowledge/classify/: classify.py  domain_registry.py  embedding_space.py  soft_classify.py  sub_registry.py
src/loom/knowledge/context/: context_provider.py
src/loom/knowledge/rag/: chunker.py  embedding.py  rag_engine.py  vector_store.py
src/loom/kpak/: __init__.py  __main__.py  pack.py  unpack.py
src/loom/loom/: __init__.py  factory.py  manager.py  shuttle.py
src/loom/manager/: __init__.py  client.py  factory.py  models.py  shuttle.py
src/loom/scheduler/: __init__.py  builtins.py  registry.py  runner.py
src/loom/tools/: __init__.py  hermes_tools.py
templates/: SOUL-template.md
tests/: __init__.py  audit_kafed.py  audit_report.py  debug_rag.py  e2e_rag_check.py  flow_demo.py  km_ingest_demo.py  test_chunker.py  test_classify_integration.py  test_loom.py  test_pipeline.py  test_quality.py
