[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kafed"
version = "2.2.0"
description = "Knowledge Agent Framework for Embedded Data — Five-layer Intelligent Flywheel"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["rag", "knowledge-management", "embeddings"]

authors = [
    {name = "KAFED Contributors"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "sentence-transformers>=3.0",
    "chromadb>=1.5",
    "numpy>=1.24",
]

[project.optional-dependencies]
# 無 —— KAFED 運行無需 HTTP 服務器

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = ["pytest>=8"]

[project.scripts]
kafed-bootstrap = "kafed.install.bootstrap:main"
kafed-heartbeat = "kafed.finder.heartbeat:run_tick"
kafed-init = "kafed.finder.heartbeat:ensure_running"
kafed-explore = "kafed.finder.explorer:scan"
