[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loom"
version = "4.0.3"
description = "Loom — Conversation-level Knowledge Management Engine for AI Agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["rag", "knowledge-management", "embeddings", "conversation", "loom"]

authors = [
    {name = "Loom Contributors"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "sentence-transformers>=3.0",
    "chromadb>=1.5",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
loom-bootstrap = "loom.install.bootstrap:main"
loom-heartbeat = "loom.finder.heartbeat:run_tick"
loom-init = "loom.finder.heartbeat:ensure_running"
loom-explore = "loom.finder.explorer:scan"
