[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "loom"
version = "4.2.0"
description = "Loom — Conversation-level Knowledge Management Engine for AI Agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["rag", "knowledge-management", "embeddings", "conversation", "loom"]

authors = [
    {name = "Loom Contributors"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "sentence-transformers>=3.0",
    "chromadb>=1.5",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff"]

[project.urls]
Source = "https://github.com/ahillzhao-msn/LOOM"
Documentation = "https://github.com/ahillzhao-msn/LOOM#readme"

[project.scripts]
loom-bootstrap = "loom.install.bootstrap:main"

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]
exclude = ["**/__pycache__/**"]

[tool.hatch.build]
dev-mode-dirs = ["src"]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov", "ruff"]
